# regression_template

./: model-save.h5  pyproject.toml  regression_1.ipynb  regression_2.ipynb
model-save/: keras_metadata.pb  saved_model.pb
model-save/variables/: variables.data-00000-of-00001  variables.index
